[package]
name = "diesel-enum-case"
version = "0.3.0"
authors = ["Steven Hanna <steventhanna@gmail.com>"]
edition = "2018"
description = "Interop between your enums and your database with diesel, with customizable case conversion for string enums"
repository = "https://github.com/steventhanna/diesel-enum"
keywords = ["diesel", "database", "enum", "case", "conversion"]
readme = "README.md"
categories = ["database", "data-structures"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
